--- a/_posts/bible-studies-Viet/2022-09-07-Co-lo-se.md
+++ b/_posts/bible-studies-Viet/2022-09-07-Co-lo-se.md
@@ -3,8 +3,8 @@ title: "Cơ-lô-se"
 headline: "Colossians - headline"
 excerpt: "Bài nghiên cứu sách Cơ-lô-se theo từng câu từ đoạn 1 đến 4."
 image: 
-  feature: Colossians.jpg
-  teaser: Colossians-teaser.jpg
+  feature: Co-lo-se.jpg
+  teaser: Co-lo-se-teaser.jpg
   thumb: colossians-thumb.png
 tags: [colossians, bible-studies]
 featured: true
@@ -26,5 +26,9 @@ Dưới đây là thu thập các tóm tắt những bài học theo sách Cơ-l
 
 Những ý niệm chính thu thập được từ đoạn Kinh thánh này: 1) Đức Tin, Hy Vọng, và Tình Yêu Thương, 2) Thực Sự Hiểu Biết Ơn Chúa, 3) Biết Ý Chúa, 4) Định Nghĩa Sứ Đồ Của Chúa Giê-su (phim dài 10 phút để giúp các học viên bén nhậy khi nhận diện những tiên tri và giáo điều giả dối).
 
-Loạt bài này sẽ có thêm những bài tóm tắt sau mỗi lớp Trường Chúa Nhật. Nếu các bạn thấy những bài học nay bổ ích cho đời sống bước đi theo Chúa, xin mời các bạn đến học mỗi sáng Chúa Nhật trên Zoom.
+##  [<u>Cơ-lô-se 1:7-10</u>]({{ site.url }}{% post_url bible-studies-Viet/Colossians/2022-09-08-Co-lo-se-01-v07-10 %})
+
+Những ý niệm chính thu thập được từ đoạn Kinh thánh này: 1) Yêu thương trong Thánh Linh, 2) Biết ý Chúa, 3) Nẩy ra đủ các việc lành.
+
+Loạt bài này sẽ có thêm những bài tóm tắt sau mỗi lớp Trường Chúa Nhật. Nếu các bạn thấy những bài học này bổ ích cho đời sống bước đi theo Chúa, xin mời các bạn đến học mỗi sáng Chúa Nhật trên Zoom.
 
