--- a/_posts/bible-studies-Viet/Colossians/2022-09-08-Co-lo-se-01-v01-06.md
+++ b/_posts/bible-studies-Viet/Colossians/2022-09-08-Co-lo-se-01-v01-06.md
@@ -2,7 +2,7 @@
 title: "Colossians 1:1-6"
 excerpt: "Đức Tin, Sự Hy Vọng, và Tình Yêu Thương."
 image:
-  teaser: Colossians-teaser.jpg
+  teaser: Co-lo-se-teaser.jpg
 tags: [colossians, bible-studies]
 featured: false
 modified:
@@ -22,7 +22,7 @@ Chào các bạn,
 
 <div>
 <p>
-<img alt src="{{ site.url }}/assets/images/Colossians-teaser.jpg" style="border: 0px none; margin: 7px 15px 0px 0px; max-width: 100%; height: 148px; padding: 0px; float: left;">
+<img alt src="{{ site.url }}/assets/images/Co-lo-se-teaser.jpg" style="border: 0px none; margin: 7px 15px 0px 0px; max-width: 100%; height: 148px; padding: 0px; float: left;">
 Qua các buổi học Kinh thánh trong nhiều năm qua, có một đặc điểm mà tôi không biết các bạn có cảm nhận được qua sự hướng dẫn lớp của tôi. Đây cũng là sự thay đổi quan trọng nhất của riêng tôi về sự đọc, hay học, Kinh thánh.
 </p>
 </div>
