--- a/_posts/bible-studies/Colossians/2022-09-08-Colossians-01-v07-10.md
+++ b/_posts/bible-studies/Colossians/2022-09-08-Colossians-01-v07-10.md
@@ -18,16 +18,14 @@ comments_locked: false
 
 {{ page.excerpt | markdownify }}
 
-{% comment %}
 [(<em>Bấm vào đây để đọc tiếng Việt</em>)]({{ site.url }}{% post_url bible-studies-Viet/Colossians/2022-09-08-Co-lo-se-01-v07-10 %})
-{% endcomment %}
 
 Dear friends,
 
 <div>
 <p>
 <img alt src="{{ site.url }}/assets/images/Colossians-teaser.jpg" style="border: 0px none; margin: 7px 15px 0px 0px; max-width: 100%; height: 148px; padding: 0px; float: left;">
-The positive qualities Paul attributes to the Colossians appear to be a continuation of our [(<em>previous study</em>)]({{ site.url }}{% post_url bible-studies/Colossians/2022-09-08-Colossians-01-v01-06 %}) from Colossians 1:1-6, particularly verse 5: <i>"<sup>3</sup>We always give thanks to God, the Father of our Lord Jesus Christ, when we pray for you, <sup>4</sup>since we heard about your faith in Christ Jesus and the love that you have for all the saints. <sup>5</sup><u>Your faith and love have arisen from the hope laid up for you in heaven</u>, which you have heard about in the message of truth, the gospel <sup>6</sup>that has come to you."</i>
+The positive qualities Paul attributes to the Colossians appear to be a continuation of our <a href="{{ site.url }}/colossians/Colossians-01-v01-06/"><u>previous study</u></a> from Colossians 1:1-6, particularly verse 5: <i>"<sup>3</sup>We always give thanks to God, the Father of our Lord Jesus Christ, when we pray for you, <sup>4</sup>since we heard about your faith in Christ Jesus and the love that you have for all the saints. <sup>5</sup><u>Your faith and love have arisen from the hope laid up for you in heaven</u>, which you have heard about in the message of truth, the gospel <sup>6</sup>that has come to you."</i>
 </p>
 </div>
 
