--- a/_posts/bible-studies-Viet/Colossians/2022-09-08-Co-lo-se-01-v07-10.md
+++ b/_posts/bible-studies-Viet/Colossians/2022-09-08-Co-lo-se-01-v07-10.md
@@ -23,7 +23,7 @@ Dear friends,
 <div>
 <p>
 <img alt src="{{ site.url }}/assets/images/Co-lo-se-teaser.jpg" style="border: 0px none; margin: 7px 15px 0px 0px; max-width: 100%; height: 148px; padding: 0px; float: left;">
-Những đặc tính tốt mà Phao-lô đã dùng để diễn tả tín hữu Cơ-lô-se dường như là tiếp theo từ [(<em>bài học tuần trước</em>)]({{ site.url }}{% post_url bible-studies-Viet/Colossians/2022-09-08-Co-lo-se-01-v01-06 %}) dựa theo Cơ-lô-se 1:1-6, nhất là trong câu 5: <i>"<sup>3</sup>Trong khi chúng tôi cầu nguyện cho anh em không thôi, thì cảm tạ Ðức Chúa Trời là Cha Ðức Chúa Jêsus Christ chúng ta. <sup>4</sup>Vì chúng tôi đã nghe về đức tin của anh em nơi Ðức Chúa Jêsus Christ và về sự yêu thương của anh em đối với mọi thánh đồ, <sup>5</sup><u>vì cớ sự trông cậy để dành cho anh em ở trên trời</u> là sự trước kia anh em đã nhờ đạo Tin Lành chân thật mà biết đến."</i>
+Những đặc tính tốt mà Phao-lô đã dùng để diễn tả tín hữu Cơ-lô-se dường như là tiếp theo từ <a href="{{ site.url }}/colossians-viet/Co-lo-se-01-v01-06/"><u>bài học tuần trước</u></a> dựa theo Colossians 1:1-6, nhất là trong câu 5: <i>"<sup>3</sup>Trong khi chúng tôi cầu nguyện cho anh em không thôi, thì cảm tạ Ðức Chúa Trời là Cha Ðức Chúa Jêsus Christ chúng ta. <sup>4</sup>Vì chúng tôi đã nghe về đức tin của anh em nơi Ðức Chúa Jêsus Christ và về sự yêu thương của anh em đối với mọi thánh đồ, <sup>5</sup><u>vì cớ sự trông cậy để dành cho anh em ở trên trời</u> là sự trước kia anh em đã nhờ đạo Tin Lành chân thật mà biết đến."</i>
 </p>
 </div>
 
