Fixed several issues with parables

--- a/_posts/bible-studies-Viet/Parables/2015-05-19-Quan-Gia.md
+++ b/_posts/bible-studies-Viet/Parables/2015-05-19-Quan-Gia.md
@@ -1,9 +1,9 @@
 ---
 title: "Ngụ Ngôn Quản Gia Bất Nghĩa"
-excerpt: "Ngụ Ngôn này không nói về tiền của, nhưng là một lời mỉa mai những kẻ     tưởng họ có thể dùng tiền của mua nước thiên đàng (Matthew 13:1-23, Luke 16:1-8)."
+excerpt: <i>Chỉ Chúa có quyền tha nợ.</i>
 image: 
   teaser: parable-of-the-evil-steward-teaser.jpg
-tags: [parable, bible-studies]
+tags: [parable, bible-studies, law, grace, faith]
 featured: false
 modified:
 comments: true
@@ -12,49 +12,67 @@ feature:
 ---
 
 {% include toc.html %}
+{% include toc_spacer.html %}
+{% include bible-study/ngu-ngon %}
 
 {{ page.excerpt | markdownify }}
 
 <div>
 <p>
 <img alt src="{{ site.url }}/assets/images/dishonest-steward.jpg" style="border: 0px none; margin: 7px 15px 0px 0px; max-width: 100%; height: 148px; padding: 0px; float: left;">
-Trái với những gì bạn thường tìm được trong internet, ra-đi-ô, hoặc sách vở, hoặc bất kỳ bài giảng nào bạn đã từng nghe, ngụ ngôn này không phải về tiền của, tài năng, hay cách sử dụng của cải cho nước Chúa. Chúng ta hãy đọc lại ngụ ngôn này một lần nữa, như thể bạn chưa từng đọc, chưa từng được nghe giảng, nhưng chỉ hãy giữ ý niệm rằng chớ tìm cách hiểu ngụ ngôn này cách cô lập mà không đặt vào bối cảnh của toàn bộ chương trình cứu rỗi của Kinh thánh.
+Dưới đây là tóm tắt bài học Chúa nhật tuần qua dựa theo Ngụ Ngôn Người Quản Gia Bất Nghĩa trong sách Lu-ca chương 16. Bài học này sẽ cho chúng ta biết người quản gia bất nghĩa này là biểu tượng cho ai, và ý nghĩa của những món nợ, sự người quản gia giảm nợ cho những con nợ, và hậu quả của sự giảm nợ đó. Bài viết dựa trên ngụ ngôn này đã được viết vào tháng 5, 2015, nhưng từ khi ấy tôi đã được trưởng thành nhiều trong Giao Ước Mới, nên sự viết lại bài này là điều cần thiết.
 </p>
 </div>
 
-## Sự khôn ngoan của đời này
+## 1. LU-CA 16:1-12
 
-> <sup>1</sup>Ðức Chúa Jêsus lại phán cùng môn đồ rằng: người giàu kia có một quản gia bị cáo với chủ rằng người tiêu phá của chủ.  <sup>2</sup>Vậy, chủ đòi người đó mà nói rằng: Ta nghe nói về ngươi nỗi chi? Hãy khai ra việc quản trị của ngươi, vì từ nay ngươi không được cai quản gia tài ta nữa.  <sup>3</sup>Người quản gia tự nghĩ rằng: Chủ cách chức ta, ta sẽ làm gì? Làm ruộng thì ta không có sức làm nổi, còn đi ăn mày thì hổ ngươi.  <sup>4</sup>Ta biết điều ta sẽ làm, để khi bị cách chức, có kẻ tiếp rước ta về nhà.  <sup>5</sup>Ngài ấy bèn gọi riêng từng người mắc nợ chủ mình đến, và hỏi người thứ nhứt rằng: Ngươi mắc nợ chủ ta bao nhiêu?  <sup>6</sup>Trả lời rằng: Một trăm thùng dầu. Quản gia nói rằng: Hãy cầm lấy từ khế, ngồi xuống đó, viết mau: Năm chục.  <sup>7</sup>Rồi hỏi người kia rằng: Còn ngươi, mắc bao nhiêu? Trả lời rằng: Một trăm hộc lúa mì. Quản gia rằng: Hãy cầm lấy tờ khế và viết: Tám chục.  <sup>8</sup>Chủ bèn khen quản gia bất nghĩa ấy về việc người đã làm khôn khéo như vậy. Vì con đời nầy trong việc thông công với người đồng đời mình thì khôn khéo hơn con sáng láng. (Luke 16:1-8)
+*"<sup>1</sup>Ðức Chúa Jêsus lại phán cùng môn đồ rằng: người giàu kia có một quản gia bị cáo với chủ rằng người tiêu phá của chủ. 
+<sup>2</sup>Vậy, chủ đòi người đó mà nói rằng: Ta nghe nói về ngươi nỗi chi? Hãy khai ra việc quản trị của ngươi, vì từ nay ngươi không được cai quản gia tài ta nữa. 
+<sup>3</sup>Người quản gia tự nghĩ rằng: Chủ cách chức ta, ta sẽ làm gì? Làm ruộng thì ta không có sức làm nổi, còn đi ăn mày thì hổ ngươi. <sup>4</sup>Ta biết điều ta sẽ làm, để khi bị cách chức, có kẻ tiếp rước ta về nhà. 
+<sup>5</sup>Ngài ấy bèn gọi riêng từng người mắc nợ chủ mình đến, và hỏi người thứ nhứt rằng: Ngươi mắc nợ chủ ta bao nhiêu? 
+<sup>6</sup>Trả lời rằng: Một trăm thùng dầu. Quản gia nói rằng: Hãy cầm lấy từ khế, ngồi xuống đó, viết mau: Năm chục. 
+<sup>7</sup>Rồi hỏi người kia rằng: Còn ngươi, mắc bao nhiêu? Trả lời rằng: Một trăm hộc lúa mì. Quản gia rằng: Hãy cầm lấy tờ khế và viết: Tám chục. 
+<sup>8</sup>Chủ bèn khen quản gia bất nghĩa ấy về việc người đã làm khôn khéo như vậy. Vì con đời nầy trong việc thông công với người đồng đời mình thì khôn khéo hơn con sáng láng. 
+<sup>9</sup>Còn ta nói cho các ngươi: Hãy dùng của bất nghĩa mà kết bạn, để khi của ấy hết đi, họ tiếp các ngươi vào nhà đời đời. 
+<sup>10</sup>Ai trung tín trong việc rất nhỏ, cũng trung tín trong việc lớn; ai bất nghĩa trong việc rất nhỏ, cũng bất nghĩa trong việc rất lớn. 
+<sup>11</sup>Vậy nếu các ngươi không trung tín về của bất nghĩa, có ai đem của thật giao cho các ngươi? 
+<sup>12</sup>Nếu các ngươi không trung tín về của người khác, ai sẽ cho các ngươi được của riêng mình?"*
 
-Quí vị nghĩ người chủ này là ai? Phải chăng Chúa đang dùng nhân vật này để nói về chính Ngài? Đa số thường nghĩ vậy. Nhưng câu 8 cho chúng ta thấy người chủ này không tượng trưng cho Chúa, vì Ngài không thể nào "khen quản gia bất nghĩa." Người chủ của "quản gia bất nghĩa," của "con đời nầy," không phải là biểu tượng của Đức Chúa Trời hằng sống. Trong lối suy nghĩ, và cách định giá trị của đời này, người khôn ngoan như quản gia trong ngụ ngôn, dù đã làm tổn hại cho chủ một phần, nhưng tài khéo và sự khôn ngoan của người đó có thể đem lại cho chủ lợi ích bội phần hơn những thiệt hại tạm thời. Nhưng sự khôn ngoan này không có phần trong nước Trời. Người quản gia bất nghĩa này không biểu hiện một tính chất nào của người có đức tin.
+According to this parable, a manager is about to be fired because he failed to perform his assigned duties. He reduced the debtor who owed ten to eight, and another to five. He did it with the intention of gaining their favor if his job was terminated.
 
-Chúng ta nghĩ gì về Chúa? Chúng ta biết gì về cách Ngài định giá trị về sự sống, thành quả, và giá trị con người? Chúa trọng kẻ khôn ngoan như người quản gia này chăng? Chúa muốn dạy chúng ta điều gì qua ngụ ngôn này? Hai nhân vật chính trong ngụ ngôn này dường thuộc về thế gian này hơn là nước Chúa. Chúng ta mong mỏi học được điều gì qua những thủ đoạn và cách định giá trị của họ? Chúng ta thực có thể nghĩ rằng Chúa dùng họ làm khuôn mẫu cho chúng ta noi theo?
+## 2. TẠI SAO CHỦ LẠI KHEN NGỢI?
 
-## Của cải đời này mua được sự sống đời đời?
+Thực ra sự khen ngợi của người chủ chỉ là một sự mỉa mai, vì những dấu hiệu sau đây.  
 
-> <sup>9</sup>Còn ta nói cho các ngươi: Hãy dùng của bất nghĩa mà kết bạn, để khi của ấy hết đi, họ tiếp các ngươi vào nhà đời đời. (Luke 16:9)
+- Chúa phân ra hai hạng người, *“con đời này,”* và *“con sáng láng,”* và rõ ràng là Ngài liệt ông vào hạng *“con đời này.”**  
+- Người này theo cách thức của thế gian để mua không chỉ những sự của đời này, mà cả *“nhà đời đời”* nữa. Đối với người theo Phật giáo thì nhà đời đời đó có thể là cõi Niết Bàn, với những người vô tín thì cho đến hậu tự của họ mãi về sau. Mỗi người, mỗi tôn giáo, đều có cái nhìkhác nhau về cõi đời đời. Nhưng nhà đời đời của Chúa thì không ai có thể mua được, mà chỉ được ban cho qua đức tin.  
+- Người không trung tín về những trách nhiệm trong thế gian này thì không thể nào được Chúa ban cho *“của thật,”* tức là phúc âm, là tin mừng cứu rỗi.  
 
-Có một từ trong thần học gọi là "isogesis," mà dịch qua tiếng Việt là "đoạn chương thủ nghĩa," nghĩa là diễn giải một đoạn Kinh thánh như là một ý niệm độc lập mà không đối chiếu với bối cảnh chung quanh. Nếu chúng ta phạm vào điều đó khi diễn giải đoạn Kinh thánh này, chắc chắn chúng ta sẽ chú vào câu "họ tiếp các ngươi vào nhà đời đời" và đi đến kết luận là câu Kinh thánh này chỉ chúng ta cách vào nước Trời. Đây thực là cách diễn giải thường thấy trong các hội thánh. Nhưng như tôi mở đầu bài viết này rằng chúng ta chỉ nên đọc đoạn Kinh thánh này, hoặc bất cứ đoạn Kinh thánh nào, trong nội dung rộng lớn hơn của phương cách Chúa cứu chúng ta. Bối cảnh rộng lớn hơn nói rằng chỉ có Chúa Giê-su là con đường, chân lý, và sự sống duy nhất mà qua Ngài chúng ta có niềm hy vọng về nước Thiên đàng. Do đó câu Kinh thánh này không thể được giải thích theo cách đoạn chương thủ nghĩa.
+Do đó sự khen ngợi của chủ chỉ là một lời mỉa mai rằng họ chỉ khôn ngoan về đời này mà thôi, còn những *“con sáng láng”* thì được sự khôn ngoan từ nơi Chúa.
 
-Đối tượng của Chúa Giê-su khi Ngài kể ngụ ngôn này là những người chưa có niềm tin cứu rỗi. Nào là các thầy thông giáo, các người Pha-ri-si, người Do-thái thấm nhuần luật pháp Môi-se, người ngoại với những tôn giáo của họ. Nói chung là cả nhân loại vẫn còn chìm đắm trong tội lỗi, và tin lành chưa được truyền bá trong nhân gian cho đến ngày Chúa trút hơi thở cuối cùng. Với những người này, dù họ có dùng hết của bất nghĩa để mua đường vào nước Trời thì cũng không vào được, vì chỉ có một con đường vào nước Trời đó là đức tin nơi Chiên Con dâng mình làm của lễ chuộc tội thế gian.
+## 3. LUẬT PHÁP PHA-RI-SI
 
-Còn giả sử nếu những người đang dự thính là tín hữu, là những kẻ đã gọi Chúa Giê-su là Cứu Chúa, thì họ không cần phải "dùng của bất nghĩa mà kết bạn," vì nước Trời đã là của họ.
+Chúa đã ban cho dân Do-thái Mười Điều Răn cùng bộ luật pháp Môi-se để làm *“thầy giáo đặng dẫn họ đến Đấng Christ. (Ga-la-ti 3:24)”* Nhưng vì họ phạm tội cùng Chúa, nên Ngài bắt họ phải đi đầy ở xứ Ba-by-lôn. Ở đó, trong gần 70 năm, người Do-thái dưới sự lãnh đạo của người Pha-ri-si đã có nhiều thời gian để suy gẫm về sự phạm tội của họ. Do đó, họ đã quyết rằng khi được Chúa cho trở về quê hương xứ sở, họ sẽ làm sao đề không phạm tội cùng Ngài nữa.
 
-Do đó chúng ta phải kết luận rằng câu 9 là một lời thách thức, hoặc mỉa mai của Chúa Giê-su: Các anh là những người khôn ngoan của đời này, dùng của cải để gây thế lực, mua sự bình an. Hầu như các anh được cả thiên hạ. Nhưng liệu các anh có mua được nước Thiên Đàng hay không? Còn những người trở nên bạn của các anh nhờ của bất nghĩa, họ có thực là công dân nước Trời để tiếp rước các anh vào?
+Thế là bộ luật pháp của người Pha-ri-si được ra đời (the Pharasaical Law) gồm những điều luật như một hàng rào bao chung quanh luật pháp Môi-se. Nếu họ có phạm điều chi, thì chỉ động đến luật Pha-ri-si mà không động đến luật của Môi-se, như vậy họ sẽ tránh phải bị lưu đầy một lần nữa. Nhưng đây chỉ là sự tính toán của “con đời này” mà thôi.
 
-Quí vị có thấy ẩn dụ trong ngụ ngôn này không? Quí vị có thấy sự mỉa mai? Có thấy rằng Chúa đang nói móc người nghe mà phần lớn là những người giàu có và những lãnh đạo tôn giáo nhiều thế lực?
+Trong sự ban bộ luật Pha-ri-si, họ đã xử sự giống người quản gia bất nghĩa trong ngụ ngôn. Mười Điều Răn và bộ luật Môi-se đòi hỏi từ người Do-thái mười phần, thì bộ luật Pha-ri-si chỉ đòi một phần nhỏ của mười phần đó. Thí dụ như về điều răn thứ bốn về ngày Sa-bát: *“Hãy nhớ ngày nghỉ đặng làm nên ngày thánh. (Xuất 20:8),”* thì trong sách luật Talmud bản Soncino trang 759 tiểu mục 149a, ghi rằng để giữ ngày Sa-bát thì không được nhìn vào gương treo trên tường, không được đốt một ngọn đèn sáp, nhưng được mướn một người ngoại để đốt đèn đó, và được bán một trứng gà đẻ trong ngày Sa-bát cho người ngoại. Nếu giữ được những điều đó thì được kể như đã làm thỏa được điều răn của Chúa.
 
-## Điều duy nhất Chúa đòi hỏi là sự trung tín
+Một điều nữa đáng ghi nhận là sau nhiều thế hệ sống dưới luật pháp của người Pha-ri-si, họ coi những luật đó còn trọng hơn luật pháp Môi-se và Mười Điều Răn.
 
-> <sup>10</sup>Ai trung tín trong việc rất nhỏ, cũng trung tín trong việc lớn; ai bất nghĩa trong việc rất nhỏ, cũng bất nghĩa trong việc rất lớn. <sup>11</sup>Vậy nếu các ngươi không trung tín về của bất nghĩa, có ai đem của thật giao cho các ngươi? <sup>12</sup>Nếu các ngươi không trung tín về của người khác, ai sẽ cho các ngươi được của riêng mình? (Luke 16:10-12)
+## 4. NGƯỜI PHA-RI-SI VÀ QUẢN GIA BẤT NGHĨA
 
-Chúa Giê-su tóm lược 10 điều răn của Đức Chúa Trời lại còn hai điều răn cao trọng nhất: "37Ðức Chúa Jêsus đáp rằng: Ngươi hãy hết lòng, hết linh hồn, hết ý mà yêu mến Chúa, là Ðức Chúa Trời ngươi. 38Ấy là điều răn thứ nhứt và lớn hơn hết. 39Còn điều răn thứ hai đây, cũng như vậy: Ngươi hãy yêu kẻ lân cận như mình. 40Hết thảy luật pháp và lời tiên tri đều bởi hai điều răn đó mà ra." (Matthew 22:37-40) Hai điều này thực ra còn khó vạn lần hơn 10 điều răn nguyên thủy, vì ai nghĩ mình thỏa được hai điều răn về sự yêu thương này thì người đó có tư tưởng cao quá đỗi về chính mình. Hãy thử suy gẫm về một điều răn tương đối dễ hơn hai điều đó: giữ ngày Sa-bát làm nên ngày thánh. Ai trong vòng những kẻ tuân theo luật pháp Môi-se đã giữ được điều răn đó theo đúng ý muốn của Đức Chúa Trời? Nếu một người chỉ cần có ý tưởng tà dâm thì cũng kể như đã phạm tội đó, thì ví bằng một người có giữ được ngày Sa-bát về thể xác, nhưng có chắc giữ được ngày đó trong tâm hồn? Chắc chắn là không.
+Người quản gia cắt nợ của những người thiếu nợ thể nào, thì người Pha-ri-si cũng hạ bớt tiêu chuẩn tối cao của Đức Chúa Trời. Các bạn có thể nêu lên câu hỏi: “Vậy thì điều đó có liên hệ gì đến phúc âm và sự cứu rỗi?” Chắc chắn phải có vì ít nhất một lý do chính yếu, là điều chi Chúa Giê-su phán qua ngụ ngôn đều có một tầm mức quan trọng như nhau, và mọi sự dạy dỗ qua ngụ ngôn đều nói về phúc âm cứu rỗi.  
 
-Vậy ai có thể xưng mình là người trung tín trong mọi việc đời này? Vì theo James 2:10, chỉ cần thiếu trung tín trong một điều thì cũng kể như không trung tín trong mọi sự. Lời Chúa phán trong câu 10-12 ở trên là lời cáo buộc mọi kẻ nghe về sự bất trung mà tất cả đều phạm, chẳng trừ một ai. Trong vòng những kẻ đang nghe ngụ ngôn này, cũng như tất cả dòng dõi A-đam và Ê-va, chẳng một ai trung tín.
+Sự giảm nợ của người quản gia có hiệu quả khiến người có nợ không thấy rõ tầm mức của sự nợ nần của họ. Sự hạ tiêu chuẩn của Chúa từ luật pháp Môi-se xuống luật của người Pha-ri-si cũng khiến người có tội không thấy sự tình trạng tội lỗi của họ.  
 
-Nhưng có một điều duy nhất Chúa ban cho chúng ta mà Ngài đòi hỏi sự trung tín, đó là đức tin nơi Đấng Cứu Thế. Vì Romans 1:17 viết rằng: "Người công bình sẽ sống bởi đức tin." Áp-ra-ham cũng bởi đức tin mà được xưng công bình. John 3:16 viết rằng: "Hễ ai tin Con ấy thì không bị hư mất nhưng được sự sống đời đời." Và còn nhiều lời Kinh thánh viết về chân lý đó nữa. Chỉ mỗi điều đó Chúa đòi hỏi nơi chúng ta sự trung tín. Chỉ mỗi sự trung tín đó là điều kiện để Chúa ban cho chúng ta cơ nghiệp đời đời, là "của thật" trong ngụ ngôn này.
+Ga-la-ti 3:24 viết, *“Ấy vậy, luật pháp đã như thầy giáo đặng dẫn chúng ta đến Ðấng Christ, hầu cho chúng ta   bởi đức tin mà được xưng công bình.”*
 
-Trung tín trong đức tin. Trung tín trong sự chỉ cậy nơi Chúa Giê-su là con đường duy nhất vào đất hứa. Trung tín trong sự chẳng cậy nhờ nơi việc làm bởi luật pháp đòi hỏi để được sự công bình của Đức Chúa Trời. Trung tín trong niềm tin quyết rằng những điều gì Đức Chúa Trời đã hứa thì Ngài sẽ làm cho trọn. Đó là sự trung tín thật mà Chúa nói đến trong ngụ ngôn này. Hãy suy gẫm ngụ ngôn này bằng con mắt thuộc linh để hiểu ý nghĩa chân thực của nó.
+Nếu không thấy sự đáng sợ của luật pháp, như sự đáng sợ của khung cảnh xung quanh núi Si-nai khi Môi-se mang xuống từ trên núi Mười Điều Răn trên hai bảng đá, đến nỗi thú vật cũng phải kinh hãi, thì họ sẽ không mở mắt để thấy đạo ân điển của Chúa, đó là đạo trong Đấng Christ.
+
+## 5. KẾT LUẬN
+
+E rằng sự giảm bớt mức độ nghiêm trọng của luật pháp Cựu Ước không phải chỉ giới hạn dưới ảnh hưởng của người Pha-ri-si, mà ngày nay trong Tân Ước, nhiều người cũng tìm cách làm giảm hiệu lực của luật mới là luật của Thánh Linh sự sống nhận được bởi đức tin nhờ ân điển. Họ làm giảm hiệu lực của đạo ân điển như thế nào? Bằng cách đem tín hữu trở về với luật pháp của thời Cựu Ước.
 
 {% include bible-study/bible-study-footer %}
 
