--- a/_posts/bible-studies/Parables/2015-05-17-The-Net.md
+++ b/_posts/bible-studies/Parables/2015-05-17-The-Net.md
@@ -13,6 +13,8 @@ feature:
 ---
 
 {% include toc.html %}
+{% include toc_spacer.html %}
+{% include bible-study/parables %}
 
 {{ page.excerpt | markdownify }}
 
