fine tuned 1st John 1st study notes

--- a/_posts/bible-studies-Viet/2022-09-15-Tho-Giang.md
+++ b/_posts/bible-studies-Viet/2022-09-15-Tho-Giang.md
@@ -36,5 +36,5 @@ Dưới đây là thu thập các tóm tắt những bài học theo Thơ Giăng
 
 ##  [<u>1 Giăng:1-2:6</u>]({{ site.url }}{% post_url bible-studies-Viet/John-Epistles/2022-09-15-1John-ch1-ch2-v6-Viet %})
 
-Những ý niệm chính thu thập được từ đoạn Kinh thánh này: 1) Nếu chúng ta đi trong sự sáng, ết Chúa là giữ các điều răn, 3) Ở trong Chúa là làm theo y như chính Ngài đã làm.
+Những ý niệm chính thu thập được từ đoạn Kinh thánh này: 1) Nếu chúng ta đi trong sự sáng, 2) biết Chúa là giữ các điều răn, 3) Ở trong Chúa là làm theo y như chính Ngài đã làm.
 
