--- a/_posts/bible-studies/John-Epistles/2022-09-15-1John-ch1-ch2-v6.md
+++ b/_posts/bible-studies/John-Epistles/2022-09-15-1John-ch1-ch2-v6.md
@@ -14,7 +14,7 @@ comments_locked: false
 
 {% include toc.html %}
 {% include toc_spacer.html %}
-{% include bible-study/philippians-study-notes %}
+{% include bible-study/john-epistles-study-notes %}
 
 {{ page.excerpt | markdownify }}
 
@@ -25,37 +25,67 @@ Dear friends,
 <div>
 <p>
 <img alt src="{{ site.url }}/assets/images/1-John-teaser.jpg" style="border: 0px none; margin: 7px 15px 0px 0px; max-width: 100%; height: 148px; padding: 0px; float: left;">
-<i><sup>1</sup>  Finally, my brothers and sisters, rejoice in the Lord! To write this again is no trouble to me, and it is a safeguard for you. <sup>2</sup>Beware of the dogs, beware of the evil workers, beware of those who mutilate the flesh! <sup>3</sup>  For we are the circumcision, the ones who worship by the Spirit of God, exult in Christ Jesus, and do not rely on human credentials <sup>4</sup>– though mine too are significant. If someone thinks he has good reasons to put confidence in human credentials, I have more: <sup>5</sup>I was circumcised on the eighth day, from the people of Israel and the tribe of Benjamin, a Hebrew of Hebrews. I lived according to the law as a Pharisee. <sup>6</sup>In my zeal for God I persecuted the church. According to the righteousness stipulated in the law I was blameless. <sup>7</sup>  But these assets I have come to regard as liabilities because of Christ. <sup>8</sup>More than that, I now regard all things as liabilities compared to the far greater value of knowing Christ Jesus my Lord, for whom I have suffered the loss of all things– indeed, I regard them as dung!"</i> (Philippians 3:1-8)
+The first study hour, which focused on John's first letter, was full of lively debates. However, depending on each person's point of view, this letter led us to different conclusions. Here are some of the things we covered, along with my own personal comments:
 </p>
 </div>
 
-We know that those who come to Christ are declared righteous, which means they are saved, but they must also live by faith. But what exactly does “by faith” mean? It means “not by works.” To put it another way, they are the works that are required by law.
-
-We have spent a lot of time studying topics like righteousness by faith and living by faith. I hope you find this topic to be important, as it is stated in Matthew 6:33: *“But above all pursue his kingdom and righteousness.”* Another Bible verse reminds us of a simple but essential truth when walking with God: *“<sup>28</sup>So then they said to him, “What must we do to accomplish the deeds God requires?” <sup>29</sup>Jesus replied, “This is the deed God requires – to believe in the one whom he sent."* (John 6:28-29) The most important work, according to Jesus, is to *“believe”* in him. However, many people have the notion that simply believing is insufficient, so they begin to incorporate many behaviors and doctrines into their Christian lifestyles, which tend to take precedence over simple faith in Christ and him crucified.
-
-Last Sunday, we skimmed through the entire book of Philippians, focusing primarily on chapter 3 (verses 1–16), and gathered the following main points in our first study:
-
-## 1.  DOGS
+## IF WE WALK IN THE LIGHT
 
 <span style="color: rgb(159, 29, 33);">
-*“<sup>1</sup>Finally, my brothers and sisters, rejoice in the Lord! To write this again is no trouble to me, and it is a safeguard for you. <sup>2</sup>Beware of the dogs, beware of the evil workers, beware of those who mutilate the flesh! <sup>3</sup>For we are the circumcision, the ones who worship by the Spirit of God, exult in Christ Jesus, and do not rely on human credentials  – <sup>4</sup>though mine too are significant."*
-</span> (Philippians 3:1-4a)
+*“<sup>7</sup>If we walk in the light as he himself is in the light, we have fellowship with one another and the blood of Jesus his Son cleanses us from all sin.”* (1 John 1:7)
+</span>
 
-In Philippians 3:2, Paul shows us that those he calls *“dogs”* are the *“evil workers” *and are also those who *“mutilate the flesh.”* In fact, all circumcisions are real to Jews and serve as proof of their Abrahamic ancestry. However, Paul wishes to inform them that their circumcision is only a shadow of the true circumcision, which consists of *“the ones who worship by the Spirit of God, exult in Christ Jesus, and do not rely on human credentials"* (Philippians 3:3). As we saw in the book of Acts, the leaders of the early church, including many apostles except Paul and Peter, wanted to impose the law of circumcision on Gentiles who believed in Christ. They are referred to as *“mutilators of the flesh”* by Paul.
+What do you think of the expression *"walk in the light"*? If it means giving up sin? Is it truly possible for anyone to abstain from it?
 
-However, it is worth noting that Paul refers to these Christian leaders as *“dogs,”* those who advocate circumcision. Do you think Paul was a little too harsh in calling his contemporaries who were also in charge of leading the church *“dogs”*? We tend to have a special regard for those who are tasked with handling God’s words.
+On the other hand, if walking in the light means living by faith in Christ, to become a Christian, or a member of a church, then why did John write these words to them?  This will make sense if John wrote these words as an evangelistic message for unbelievers. Therefore, the issue that I raised here is he's writing it to the wrong audience.
 
-I believe Paul used such harsh language to emphasize the significance, or danger, of false doctrines, which have the effect of rendering Christ's death ineffective. *“I do not set aside God’s grace, because if righteousness could come through the law, then Christ died for nothing!"* (Galatians 2:21) We must remember that, while Paul only mentioned circumcision, it is only a symbol of the law in general.
+Another significant point is the word *“if”* in *“if we walk in the light.”* It has the connotation of a condition. In the Strong Greek dictionary, this word is defined as follows:
 
-Because, according to the Galatians verse above, Paul did not write, *“if righteousness could be obtained through circumcision,”* but rather spoke of the law in general. Speaking of circumcision is speaking of the law.  
+> <span style="color: rgb(0, 61, 152);">**G1437**
+ἐάν
+From G1487 and G302; a conditional particle; in case that, provided, etc.; often used in connection with other particles to denote indefiniteness or uncertainty.</span>
 
-## 2. WHEN GAIN BECOMES LOSS
+The implication is in order for Jesus to cleanse us of all sins, we must abstain from all sins. Paul, on the other hand, claims that the only prerequisite for Jesus' blood to cleanse us of all sin is that we believe in Him.
+
+## TO KNOW GOD IS TO KEEP HIS COMMANDMENTS
 
 <span style="color: rgb(159, 29, 33);">
-*“ <sup>4</sup>If someone thinks he has good reasons to put confidence in human credentials, I have more: <sup>5</sup>I was circumcised on the eighth day, from the people of Israel and the tribe of Benjamin, a Hebrew of Hebrews. I lived according to the law as a Pharisee. <sup>6</sup>In my zeal for God I persecuted the church. According to the righteousness stipulated in the law I was blameless. <sup>7</sup>But these assets I have come to regard as liabilities because of Christ. <sup>8</sup>More than that, I now regard all things as liabilities compared to the far greater value of knowing Christ Jesus my Lord, for whom I have suffered the loss of all things– indeed, I regard them as dung!*”*
-</span> (Philippians 3:4-8)
+*“<sup>3</sup>Now by this we know that we have come to know God: if we keep his commandments. <sup>4</sup>The one who says “I have come to know God” and yet does not keep his commandments is a liar, and the truth is not in such a person.”* (1 John 2:3-4)
+</span>
 
-If anyone can boast of their (false) circumcision, Israel or Hebrew ancestry, the law and its keeping, or their zeal, Paul can claim to be *“blameless.”* His zeal earned him the respect of his contemporaries. This is likely what the rich young ruler was thinking in Mark 10:17-27. If God had not met Paul on the road to Damascus, he would have faced the same difficulties as the young ruler. But he did meet God and have his eyes opened to see what the true loss and gain are. Furthermore, he regarded his previous gain as *“dung.”* Men may respect those who rely on the law, but God honors those who rely on Christ through faith.
+According to John 17:3, knowing God is synonymous with having eternal life or being declared righteous, but there is a condition: *"if we keep his commandments,"* which means you must live under the law. Paul completely disagrees:
+
+> <span style="color: rgb(0, 61, 152);">*“For no one is declared righteous before him by the works of the law, for through the law comes the knowledge of sin.”* (Romans 3:20)<br  />*“For we consider that a person is declared righteous by faith apart from the works of the law.”* (Romans 3:28)<br  />*“For through the law I died to the law so that I may live to God.”* (Galatians 2:19)</span>
+
+As a result, the following conclusions must be reached:
+
+a. John was still a baby when it came to the reality of *“the just shall live by faith,”* or he hadn’t yet broken away from Judaism’s grip.<br />b. God allows the reality of church conflicts to be recorded in Scriptures, similar to what we saw in the book of Acts. Consider the issue of forcing Gentiles to follow Moses’ law or observe circumcision. This indicates that many of the apostles lacked a solid grasp of foundational truths.
+
+None of Paul’s letters contain passages like 1 John 2:3-4, which I think is a good thing.
+
+## TO ABIDE IN JESUS IS TO WALK JUST AS HE WALKED
+
+<span style="color: rgb(159, 29, 33);">
+*“<sup>5</sup>But whoever obeys his word, truly in this person the love of God has been perfected. By this we know that we are in him. <sup>6</sup>The one who says he resides in God ought himself to walk just as Jesus walked.”* (1 John 2:5-6)
+</span>
+
+To *"walk as he walked,"* you must never break any of the commandments. It is due to the fact that Jesus never sinned.
+
+I recall reading Thomas A Kempis’ The Immitation of Christ when I first became a Christian. He must have been inspired by John’s teaching in verse 6 that believers should walk as Jesus did. Do you see how impossible this teaching is? Jesus is described as follows in 2 Corinthians 5:21:
+
+*“God made the one who did not know sin to be sin for us.”*
+
+Because Jesus is sinless, he is completely capable of performing actions of righteousness. On the other hand, the prophet Isaiah describes our works as follows:
+
+*“… All our so-called righteous acts are like a menstrual rag in your sight..”* (Isaiah 64:6)
+
+So the chance for either the Apostle John and Thomas A. Kempis to walk just as Jesus walked is zero to none.
+
+## IN CONCLUSION
+
+In chapter 2, John explains that *"walking in the light"* means *"keeping God's commandments."* And if you walk in the light, *"the blood of Jesus his Son cleanses us from all sin."* This contradicts the fundamental truth that only the blood of Jesus can cleanse us of all sin, not the keeping the commandments.
+
+It appears to me that John may not be led by the Spirit, because *“... if you are led by the Spirit, you are not under the law.”* (Galatians 5:18)
 
 {% include bible-study/bible-study-footer %}
 
