--- a/_posts/bible-studies/Colossians/2022-09-08-Colossians-01-v11-22.md
+++ b/_posts/bible-studies/Colossians/2022-09-08-Colossians-01-v11-22.md
@@ -65,7 +65,7 @@ We have a tendency to believe that our becoming strangers and enemies to God was
 
 If our evil deeds are the cause of our separation from God, then we should be able to reconcile with God simply by ceasing to sin. The truth is that we are born enemies of God before we have ever done anything wrong.
 
-*"Nhưng từ A-đam cho đến Môi-se, sự chết đã cai trị cả đến những kẻ chẳng phạm tội giống như tội của A-đam"* (Romans 5:14)
+*"Yet death reigned from Adam until Moses even over those who did not sin in the same way that Adam (who is a type of the coming one)."* (Romans 5:14)
 
 If the primary goal of a Christian is to stop sinning, we're doing the impossible because no matter how hard we try, we'd never get any closer to God. But instead, we should come and rest in the finished work of Christ at the cross and let the Spirit of God bear fruit in our lives.
 
