Added excerpt for Col 1:11-22

--- a/_posts/bible-studies-Viet/Colossians/2022-09-08-Co-lo-se-01-v11-22.md
+++ b/_posts/bible-studies-Viet/Colossians/2022-09-08-Co-lo-se-01-v11-22.md
@@ -1,6 +1,6 @@
 ---
 title: "Cơ-lô-se 1:11-22"
-excerpt: "Yêu thương trong Thánh Linh. Biết ý Chúa. Nẩy ra đủ các việc lành."
+excerpt: "Năng lực từ Chúa. Giải thoát khỏi sự tối tăm. Đấng Christ là đầu mọi sự. Kẻ thù của Đức Chúa Trời. Giảng hòa với Đức Chúa Trời."
 image:
   teaser: Co-lo-se-teaser.jpg
 tags: [colossians, bible-studies]
