--- a/_posts/bible-studies/Colossians/2022-09-08-Colossians-01-v11-22.md
+++ b/_posts/bible-studies/Colossians/2022-09-08-Colossians-01-v11-22.md
@@ -1,6 +1,6 @@
 ---
 title: "Colossians 1:11-22"
-excerpt: "Empowered for patience, steadfastness, and thankfulness."
+excerpt: "Empowered for patience, steadfastness, and thankfulness. Delivered from darkness. Christ's preeminence. Enemy of God. Reconciled with God."
 image:
   teaser: Colossians-teaser.jpg
 tags: [colossians, bible-studies]
