--- a/_posts/bible-studies-Viet/2022-09-15-Tho-Giang.md
+++ b/_posts/bible-studies-Viet/2022-09-15-Tho-Giang.md
@@ -38,3 +38,7 @@ Dưới đây là thu thập các tóm tắt những bài học theo Thơ Giăng
 
 Những ý niệm chính thu thập được từ đoạn Kinh thánh này: 1) Nếu chúng ta đi trong sự sáng, 2) biết Chúa là giữ các điều răn, 3) Ở trong Chúa là làm theo y như chính Ngài đã làm.
 
+##  [<u>1 Giăng:2:7-27</u>]({{ site.url }}{% post_url bible-studies-Viet/John-Epistles/2022-09-15-1John-ch2-v7-27-Viet %})
+
+Những ý niệm chính thu thập được từ đoạn Kinh thánh này: 1) Điều răn cũ, 2) Định nghĩa tình yêu.
+
