--- a/_posts/bible-studies/John-Epistles/2022-09-15-1John-ch1-ch2-v6.md
+++ b/_posts/bible-studies/John-Epistles/2022-09-15-1John-ch1-ch2-v6.md
@@ -15,6 +15,8 @@ comments_locked: false
 {% include toc.html %}
 {% include toc_spacer.html %}
 {% include bible-study/john-epistles-study-notes %}
+{% include toc_spacer.html %}
+{% include bible-study/bible-studies %}
 
 {{ page.excerpt | markdownify }}
 
