--- a/_posts/bible-studies/Philippians/2022-09-10-Philippians-03-v13-14.md
+++ b/_posts/bible-studies/Philippians/2022-09-10-Philippians-03-v13-14.md
@@ -15,6 +15,8 @@ comments_locked: false
 {% include toc.html %}
 {% include toc_spacer.html %}
 {% include bible-study/philippians-study-notes %}
+{% include toc_spacer.html %}
+{% include bible-study/bible-studies %}
 
 {{ page.excerpt | markdownify }}
 
