--- a/_posts/bible-studies-Viet/2022-09-07-Co-lo-se.md
+++ b/_posts/bible-studies-Viet/2022-09-07-Co-lo-se.md
@@ -34,5 +34,9 @@ Những ý niệm chính thu thập được từ đoạn Kinh thánh này: 1) Y
 
 Những ý niệm chính thu thập được từ đoạn Kinh thánh này: 1) Sức Chúa ban. Được cứu. Chúa Giê-su trên hết. Kẻ thù của Đức Chúa Trời. Được giảng hòa.
 
+##  [<u>Cơ-lô-se 1:22-23</u>]({{ site.url }}{% post_url bible-studies-Viet/Colossians/2022-09-08-Colossians-01-v22-23-Viet %})
+
+Những ý niệm chính thu thập được từ đoạn Kinh thánh này: Mỗi ngày một nên thánh hơn. Đứng vững trong đức tin.
+
 Loạt bài này sẽ có thêm những bài tóm tắt sau mỗi lớp Trường Chúa Nhật. Nếu các bạn thấy những bài học này bổ ích cho đời sống bước đi theo Chúa, xin mời các bạn đến học mỗi sáng Chúa Nhật trên Zoom.
 
