--- a/_posts/bible-studies/Colossians/2022-09-08-Colossians-01-v22-23.md
+++ b/_posts/bible-studies/Colossians/2022-09-08-Colossians-01-v22-23.md
@@ -56,7 +56,7 @@ What believers fear most is that God will find them wanting when Christ returns 
 
 However, there is a catch. You must maintain the *"hope of the gospel that you heard."*  The question is, how do you maintain your position? Many people believe that by continuing to do things associated with the faith, such as attending church, tithing, evangelism, prayer, fasting, and so on. Don't misunderstand me. These things are fine, but you must be careful not to accept them as gospel. They are not the gospel you were taught. Because if you follow this false gospel of works, you will eventually lose faith in God due to repeated and unavoidable failures. Through progressive sanctification, your faith in yourself will demonstrate that you will never be *"holy, without blemish, and blameless"* before God.
 
-The true gospel you heard is simple and it's clearly stated in verse 22: *"he has reconciled you by his physical body through death to present you holy, without blemish, and blameless before him."* It's Jesus' physical body, not you, not any works that can proceed from your flesh no matter how noble they may appear.
+The true gospel you heard is simple and it's clearly stated in verse 22: *"he has reconciled you by his physical body through death to present you holy, without blemish, and blameless before him."* It's Jesus' physical body, not you, not any works from your flesh no matter how noble they may appear.
 
 Sure you should continue to do good works for God, but don't let them become your gospel, because if you do, you will have proven that you don't hold firm to the gospel you heard. My advice is you grow to understand deeply the gospel you heard, that is *"Christ and him crucified"* (1 Cor 2:2), and the works will be byproducts of your genuine faith. Works that are produced from coercion by the law are dead fruits (Romans 7:5). Be content to wait for the Spirit of God to produce fruit that endure into eternity.
 
